# HeartMirror

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  RAILWAY.md  README.md  TESTING.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  migrate-preview.cjs  migrate-preview.mjs  next.config.mjs  nixpacks.toml  package-lock.json  package.json  render.yaml  start.bat  start.sh  tailwind.config.cjs  tsconfig.json  vitest.config.ts
backend/: .env.example  Dockerfile  Procfile  pyproject.toml  requirements-prod.txt  requirements.txt  setup.cfg  setup_venv.bat  setup_venv.sh
backend-java/: pom.xml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  base_agent.py  orchestrator.py
backend/app/agents/emotion_agent/: __init__.py  agent.py  bert_classifier.py  hybrid_emotion_engine.py  prompts.py
backend/app/agents/intervention_agent/: __init__.py  agent.py  evidence_base.py  prompts.py
backend/app/agents/questionnaire_agent/: __init__.py  agent.py  conversational_assessment.py  prompts.py  rag_engine.py
backend/app/agents/risk_agent/: __init__.py  agent.py  prompts.py  risk_model.py
backend/app/api/: __init__.py  auth.py  chat.py  crisis.py  dashboard.py  diary.py  emotion.py  intervention.py  questionnaire.py
backend/app/core/: __init__.py  database.py  exceptions.py  persona.py  redis_client.py  security.py
backend/app/knowledge/: __init__.py  dsm5_graph.py  embedder.py  vector_store.py
backend/app/knowledge/data/: README.md  crisis_resources.json  dsm5_symptoms.json  intervention_db.json
backend/app/models/: __init__.py  emotion.py  intervention.py  questionnaire.py  session.py  user.py
backend/app/schemas/: __init__.py  chat.py  emotion.py  response.py  user.py
backend/app/services/: __init__.py  auth_service.py  crisis_service.py  emotion_record_service.py  encryption_service.py  intervention_service.py  llm_service.py  tracking_service.py  user_memory_service.py
backend/app/utils/: __init__.py  logger.py  validators.py
backend/scripts/: check_environment.py  init_db.py  test_ai_agent.py  test_api_connection.py  test_casual_emotion_fix.py  test_dialogue_flow.py  test_emotion_model.py  test_integration.py  test_llm_service.py  test_openrouter.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_agents/: __init__.py  test_emotion_agent.py  test_intervention_agent.py  test_orchestrator.py  test_risk_agent.py
backend/tests/test_api/: __init__.py  test_auth.py  test_chat.py  test_diary.py  test_emotion.py
backend/tests/test_services/: __init__.py  test_crisis_service.py  test_llm_service.py
docs/: agent_design.md  api.md  architecture.md  compliance.md  data_models.md  deployment.md
frontend/: .env.development  .env.github  .env.production  .eslintrc.json  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
prisma/: prisma.config.js  schema-cloud.prisma  schema-local.prisma  schema.prisma
public/: manifest.json  sw.js
scripts/: build-cloud.ps1  copy-prisma-schema.cjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  crypto.rs  db.rs  main.rs
(+239 files in other folders)
