[tool.poetry]
name = "heartmirror-backend"
version = "0.1.0"
description = "HeartMirror - AI心理健康自助管理系统后端服务"
authors = ["HeartMirror Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
websockets = "^12.0"

# LangChain Core
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"

# LLM Integration - 通义千问
dashscope = "^1.17.0"
langchain-openai = "^0.2.0"

# ML Models
transformers = "^4.36.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.0"

# Vector Store
chromadb = "^0.4.22"

# Database
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
neo4j = "^5.16.0"
redis = "^5.0.0"

# Security
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.0"

# Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# Async Tasks
celery = "^5.3.0"

# Utilities
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
alembic = "^1.13.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]