[package]
name = "heartmirror"
version = "1.0.0"
description = "AI companion for 2AM spiraling"
authors = ["RAINBOWrainy"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["std"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
directories-next = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
